Vendor Review- dialogs displaying strange Expiration Dates Files modified - [ManageMunicipalityVendors.variables.json,ManageMunicipalityVendors.html]

--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -295,7 +295,7 @@
                         <wm-composite name="composite8">
                             <wm-label class="col-md-3 form-control-static" caption="Expiration Date" horizontalalign="left" name="label12" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container7">
-                                <wm-date mindate="bind:today" datepattern="MM-dd-yyyy" datavalue="bind:Widgets.gridApprovedVendors.selecteditem.expiresDate" name="datetimeFromSuspended"></wm-date>
+                                <wm-date mindate="bind:today" datepattern="MM-dd-yyyy" datavalue="bind:Widgets.gridSuspended.selecteditem.expiresDate" name="datetimeFromSuspended"></wm-date>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
