--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -313,9 +313,15 @@
                                                     <wm-grid-column binding="addedAt" caption="Date Requested" type="string" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="text" show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="users.fullName" caption="Requested By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="masterInspections.inspectionOutcome.outcome" caption="Outcome" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                    <wm-grid-column binding="masterInspections.requestedFor" caption="Requested For" show="true" readonly="undefined"></wm-grid-column>
                                                     <wm-grid-action key="addNewRow" display-name="Request Inspection" show="true" class="btn-primary" iconclass="wi wi-plus" title="Request Inspection" action="Widgets.dialogInspectionRequest.open()"
-                                                    shortcutkey="" disabled="false" position="footer,header"></wm-grid-action>
+                                                    shortcutkey="" disabled="false" position="footer"></wm-grid-action>
                                                 </wm-grid>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow83">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn155_3" horizontalalign="center">
+                                                <wm-label padding="unset 0.5em" name="label91" caption="Sorry, inspections can not be sc" show="bind:(Variables.CurrentForm.firstRecord.formTypes.inspections=='false')&amp;&amp;(Variables.CurrentForm.firstRecord.formStatuses.allowInspections=='false')"></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
